Upgrade junit 4 to junit 5