@@ -1,45 +1,47 @@
 package org.muzir.codechef.practice.easy;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import java.util.ArrayList;
 import java.util.List;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CIELABTest {
-	private Cielab cielab;
+    private Cielab cielab;
 
-	private List<Integer> oneStage = new ArrayList<Integer>();
+    private static List<Integer> oneStage = new ArrayList<Integer>();
 
-	@Before
-	public void setUp() {
-		oneStage.add(new Integer(1));
-		oneStage.add(new Integer(2));
-		oneStage.add(new Integer(3));
-		oneStage.add(new Integer(4));
-		oneStage.add(new Integer(5));
-		oneStage.add(new Integer(6));
-		oneStage.add(new Integer(7));
-		oneStage.add(new Integer(8));
-		oneStage.add(new Integer(9));
-		oneStage.add(new Integer(0));
-		cielab = new Cielab();
-	}
+    @BeforeEach
+    public void setUp() {
+        oneStage.add(Integer.valueOf(1));
+        oneStage.add(Integer.valueOf(2));
+        oneStage.add(Integer.valueOf(3));
+        oneStage.add(Integer.valueOf(4));
+        oneStage.add(Integer.valueOf(5));
+        oneStage.add(Integer.valueOf(6));
+        oneStage.add(Integer.valueOf(7));
+        oneStage.add(Integer.valueOf(8));
+        oneStage.add(Integer.valueOf(9));
+        oneStage.add(Integer.valueOf(0));
+        cielab = new Cielab();
+    }
 
-	@Test
-	public void shouldOneStage() {
-		Integer exact = Integer.valueOf(cielab.solution(9, 1));
-		oneStage.remove(new Integer(8));
-		Assert.assertNotEquals(new Integer(8), exact);
-		Assert.assertTrue(oneStage.contains(exact));
-	}
+    @Test
+    public void shouldOneStage() {
+        Integer exact = Integer.valueOf(cielab.solution(9, 1));
+        oneStage.remove(Integer.valueOf(8));
+        assertNotEquals(Integer.valueOf(8), exact);
+        assertTrue(oneStage.contains(exact));
+    }
 
-	@Test
-	public void shouldOne() {
-		Integer exact = Integer.valueOf(cielab.solution(10000, 1));
-		System.out.println(exact);
-		Integer exact2 = Integer.valueOf(cielab.solution(2, 1));
-		System.out.println(exact2);
-	}
+    @Test
+    public void shouldOne() {
+        Integer exact = Integer.valueOf(cielab.solution(10000, 1));
+        System.out.println(exact);
+        Integer exact2 = Integer.valueOf(cielab.solution(2, 1));
+        System.out.println(exact2);
+    }
 }
